# Verify_It

./: .gitignore  .replit  FEATURE_SUMMARY.md  SECURITY_CHECKLIST.md  app.py  config.py  cors_helper.py  csrf_helper.py  database.db  forms.py  input_validation.py  mfa_utils.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  search_and_tags.py  security.py  server.py  test_security_headers.py  verification.py
app/: forms.py  sanitize.py
app/middleware/: security_headers.py
attached_assets/: Pasted-Alright-if-you-give-this-to-the-Replit-Agent-with-the-database-schema-included-it-will-have--1754925183227_1754925183228.txt  Pasted-Got-it-I-ll-make-the-full-HTML-template-layouts-now-so-the-Replit-Agent-doesn-t-just-give-you--1754925202365_1754925202365.txt  Pasted-Nice-below-are-ready-to-drop-style-css-and-script-js-files-you-can-place-in-your-app-s-1754925247599_1754925247600.txt
migrations/: 20250812_add_mfa_to_users.sql
static/: script.js  style.css
templates/: advanced_search.html  base.html  dashboard.html  index.html  log_details.html  log_wizard.html  login.html  manage_tags.html  mfa_setup.html  mfa_verify.html  new_log.html  privacy_policy.html  public_verify.html  register.html  search_results.html  terms_of_use.html  verification_result.html
templates/admin/: audit_logs.html  security_alerts.html
uploads/: .gitkeep
